k8s/mc-gateway/mc-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-mc-http
  namespace: gw-infra
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
