k8s/mc-gateway/mc-igw-httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: mc-igw-httproute
  namespace: istio-ingress
spec:
  parentRefs:
    - name: external-mc-http
      namespace: gw-infra
      kind: Gateway
  rules:
    - backendRefs:
        - name: istio-ingressgateway
          group: net.gke.io
          kind: ServiceImport
          port: 8080
